<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.auth_fragment.AuthFragment">

    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/login_title"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceDisplaySmall" />

    <com.google.android.material.card.MaterialCardView
        style="?attr/materialCardViewOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_title"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:divider="@drawable/empty"
            android:showDividers="middle"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:text="@string/login"
                app:icon="@drawable/empty"
                app:iconTint="@android:color/transparent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/register_button"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:text="@string/register"
                app:icon="@drawable/empty"
                app:iconTint="@android:color/transparent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/google_auth_button"
                style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/google" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>