<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="?attr/materialCardViewFilledStyle"
    android:backgroundTint="?attr/colorSecondaryContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/avatarImage"
            android:background="@drawable/circle"
            android:backgroundTint="?attr/colorOnSecondaryContainer"
            android:layout_marginEnd="16dp"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:importantForAccessibility="no" />

        <TextView
            android:layout_toEndOf="@id/avatarImage"
            android:text="@string/placeholder_string"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_toEndOf="@id/avatarImage"
            android:layout_below="@id/name_text"
            android:text="@string/placeholder_email"
            android:textAppearance="?attr/textAppearanceTitleSmall"
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_toEndOf="@id/avatarImage"
            android:layout_below="@id/email_text"
            android:text="@string/placeholder_datetime"
            android:textAppearance="?attr/textAppearanceBodySmall"
            android:id="@+id/created_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>